# universal-scarlette-gui

./: .gitignore  Cargo.toml  README-RUST.md  RUST_REWRITE_PLAN.md  STATUS.md  run-debug.sh  test-firmware-parser  test-firmware-parser.rs
crates/scarlett-config/: Cargo.toml
crates/scarlett-config/src/: lib.rs
crates/scarlett-core/: Cargo.toml
crates/scarlett-core/src/: device.rs  error.rs  lib.rs  mixer.rs  protocol.rs  routing.rs
crates/scarlett-gui/: Cargo.toml
crates/scarlett-gui/src/: main.rs
crates/scarlett-gui/ui/: main.slint
crates/scarlett-hotkeys/: Cargo.toml
crates/scarlett-hotkeys/src/: lib.rs  linux.rs  macos.rs
crates/scarlett-usb/: Cargo.toml
crates/scarlett-usb/examples/: list_firmware.rs  test_communication.rs  test_device_init.rs  test_firmware.rs
crates/scarlett-usb/src/: detection.rs  device_impl.rs  direct_usb_transport.rs  firmware.rs  gen3_protocol.rs  gen4_fcp.rs  lib.rs  protocol.rs  transport.rs
docs/: SCARLETT_18i20_GEN4.md
