[package]
name = "scarlett-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
scarlett-core = { path = "../scarlett-core" }
serde = { workspace = true }
ron = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
