[package]
name = "scarlett-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "scarlett-gui"
path = "src/main.rs"

[dependencies]
scarlett-core = { path = "../scarlett-core" }
scarlett-usb = { path = "../scarlett-usb" }
scarlett-hotkeys = { path = "../scarlett-hotkeys" }
scarlett-config = { path = "../scarlett-config" }

slint = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
slint-build = "1.9"
