[package]
name = "scarlett-hotkeys"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
scarlett-core = { path = "../scarlett-core" }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = { workspace = true }
cocoa = { workspace = true }
objc = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
evdev = { workspace = true }
